# wei-updater

./: .gitignore  Cargo.toml  README.md  README.zh-CN.md  trust.ps1  wei-updater.ps1  wei-updater.sh
doc/: PUBLISH.zh-CN.md  SUBMISSION-MICROSOFT.md
src/: main.rs
