[package]
name = "wei-updater"
version = "0.1.1"
edition = "2021"
description = "wei updater"
documentation = "https://github.com/zuiyue-com/wei-updater"
homepage = "https://github.com/zuiyue-com/wei-updater"
license = "MIT OR Apache-2.0"

[dependencies]
wei-run = "0.2.5"
wei-env = "0.2.12"
wei-log = "0.2.8"
serde_yaml = "0.9"
serde_json = "1"
tokio = { version = "1.28", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
winapi = { version = "0.3", features = ["winbase"] }
single-instance = "0.3"
winrt-notification = "0.5.1"
# sha2 = "0.10.7"

[profile.release]
opt-level = 'z'

[package.metadata.winres]
OriginalFilename = "WEI-UPDATER.EXE"
LegalCopyright = "Copyright © 2023 ZUIYUE.COM"
FileDescription = "WEI UPDATER"
ProductName = "WEI" 
ProductVersion = "0.1.1"

[package.metadata.windows]
subsystem = "windows"