[package]
name = "wei-updater"
version = "0.1.1"
edition = "2021"
description = "wei updater"
documentation = "https://github.com/zuiyue-com/wei-updater"
homepage = "https://github.com/zuiyue-com/wei-updater"
license = "MIT OR Apache-2.0"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[package.metadata.winres]
OriginalFilename = "WEI-UPDATER.EXE"
LegalCopyright = "Copyright © 2023 ZUIYUE.COM"
FileDescription = "WEI UPDATER"
ProductName = "WEI" 
ProductVersion = "0.1.1"

[package.metadata.windows]
subsystem = "windows"

[dependencies]
wei-run = "0.3.2"
wei-env = "0.2.13"
wei-log = "0.2.11"
wei-file = "0.1.2"
wei-single = "0.3.6"
wei-windows = { path = "../wei-windows" }
serde_yaml = "0.9"
serde_json = "1"
tokio = { version = "1.28", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
regex = "1.10.2"

[dependencies.openssl-sys]
version = "0.9"
features = ["vendored"]

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winbase"] }
winrt-notification = "0.5.1"
